# Coherent-Learning-In-Quantum-Circuits

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
experiments/: final_experiment.py  utils.py  visualization.py
src/data/: __init__.py  digits.py  one_dimension.py  synthetic.py  visualization.py
src/models/: __init__.py  datareuploading.py  encoder.py  gates.py  history.py
src/simulator/: __init__.py  simulator.py
src/visualization/: experiments.py  illustration.py  states.py
tests/: test_history.py  test_qnn.py
tests/data/: test_multi_boundaries.py
tests/history/: test_step_record.py  test_training_history.py
tests/simulator/: test_simulator.py
