[project]
name = "Coherent-QML"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "icecream>=2.1.8",
    "joblib>=1.5.3",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "optuna>=4.8.0",
    "pyfftw>=0.15.1",
    "pytest>=9.0.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
]
